--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,20 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.jpg">
+    <h3>Description:</h3>
+    <p>This recipe has 12 servings and takes a total time of 3 hours and 15 minutes to prep and cook.</p>
+    <h3>Ingrediants:</h3>
+    <ul>
+        <li>1 3/4 pound lean ground beef</li>
+        <li>1/2 cup minced onion</li>
+        <li>2 cloves garlic, crushed</li>
+        <li>13 ounces canned tomato sauce</li>
+        <li>1/2 cup water</li>
+        <li>4 tablespoons chopped fresh parsley</li>
+        <li>16 ounces ricotta cheese</li>
+        <li>3/4 cup grated parmesan cheese</li>
+        <li>12 lasagna noodles</li>
+    </ul>
 </body>
 </html>
