added steps to lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -22,5 +22,14 @@
         <li>3/4 cup grated parmesan cheese</li>
         <li>12 lasagna noodles</li>
     </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Cook ground beef, onions and garlic over medium heat until well browned</li>
+        <li>Stir in tomato sauce and water. Season with sugar, parsly, basil, salt, and pepper. Simmer, covered, for about 1 hour, stirring occasionally</li>
+        <li>Cook lasagna noodles in boiling water for approximately 10 minutes. Drain noodles, and rinse with colde water</li>
+        <li>Combine ricotta cheese with parsly, and salt</li>
+        <li>Spread some meat sauce on the bottom of a baking dish. Cover with a few sheets of lasagna noodles. Spread ricotta cheese mix on top of the lasagna noodles. Repeat until all mixtures are gone</li>
+        <li>Bake lasagna in oven for 25 minutes at 190 degrees Celsius</li>
+    </ol>
 </body>
 </html>
