--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
     <img src="../images/lasagna.jpg">
     <h3>Description:</h3>
     <p>This recipe has 12 servings and takes a total time of 3 hours and 15 minutes to prep and cook.</p>
-    <h3>Ingrediants:</h3>
+    <h3>Ingredients:</h3>
     <ul>
         <li>1 3/4 pound lean ground beef</li>
         <li>1/2 cup minced onion</li>
