linked to new webpage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/gluten-flatbread.html">Gluten-free flatbread</a></li>
+        <li><a href="recipes/gnocchi.html">Chorizo and mozzarella gnocchi bake</a></li>
     </ul>
 </body>
 </html>
